# pt-manager-tauri

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: tauri-build.cmd
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: 自动签名.md
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  cdp.rs  commands.rs  cookiecloud.rs  gotify.rs  lib.rs  ocr.rs  scheduler.rs  store.rs  updater.rs
src-tauri/src/cdp/login/: common.rs  hdkylin.rs  mod.rs  mteam.rs  nexusphp.rs
