[package]
name = "pt-manager"
version = "2.0.0"
description = "PT站点自动保活客户端"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hmac = "0.13"
sha1 = "0.11"
data-encoding = "2.11"
base64 = "0.22"
image = "0.25.10"
reqwest = { version = "0.13", features = ["json", "query", "blocking"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
md-5 = "0.10"
